# tools

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  arstechnica.nim  battery_watch.c  battery_watch.nim  bld.c  btconnect.nim  build.c  build.nims  clock.nim  compile_flags.txt  dim.c  dim.nim  ff.c  ff.nim  fzvim.c  gmail.c  gmail.nim  google.c  grvbld.h  i3menu.nim  onthegomap.c  pavolume.c  psfzf.c  status.c  status.nim  test_wst.c  todo.nim  wetter.nim  whatsapp.nim  wikipedia.c  wst.c  wst.h  wst_vector.h  youtube-to-mp3.c  youtube.nim
.todo/: 292f236617694c04.todo  34e6ed6ab78b4458.todo  556818279de04047.todo  591dedfb7ac7454c.todo  5c4c1a414cf74a24.todo  63ae274bb03e43d9.todo  68cb3bcb554341da.todo  72fd4ebfab774aae.todo  8d22d41a4c2e4e6b.todo  91b5815936c54e67.todo  ca69107ab2d14921.todo  d307e322cf8d4336.todo  e60febb34c814478.todo  rojacehabepifapu.todo
nim/: dim.nim  switch_workspace.nim  test.nim  todo.nim  udacity.nim  wst_tools.nim
scripts/: record_screen.sh  remove_prefix.py  sanitize_file_names.py
src/: agfzf.c  cheat.c  dim.c  ff.c  i3menu.c  paceconv.c  pwgen.c  sleep_watch.c  status.c  wst.h  youtube-to-mp3.c
src/status/: status_battery.c  status_colors.c  status_memory.c  status_time.c  status_wifi.c
status/: status.c  status_battery.c  status_battery.h  status_colors.h  status_format.c  status_format.h  status_ping.c  status_ping.h  status_time.c  status_time.h  status_wifi.c  status_wifi.h
